feat(): Add user route for storing data, review tests accordingly.
